assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 10 conflicts: 1 shift/reduce
State 12 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 123 conflicts: 14 shift/reduce
State 147 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';' class_list

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: %empty
    8             | feature_list feature
    9             | feature
   10             | error ';' feature_list

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' exp '}' ';'
   12        | OBJECTID '(' ')' ':' TYPEID '{' exp '}' ';'
   13        | OBJECTID ':' TYPEID feature_line ';'

   14 feature_line: %empty
   15             | ASSIGN exp

   16 formal_list: formal
   17            | formal_list ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 branch_list: branch
   20            | branch_list branch

   21 branch: OBJECTID ':' TYPEID DARROW exp ';'

   22 exp_list: exp ';'
   23         | exp_list exp ';'
   24         | error ';' exp_list

   25 formal_exp_list: exp
   26                | formal_exp_list ',' exp

   27 let: OBJECTID ':' TYPEID feature_line IN exp
   28    | OBJECTID ':' TYPEID feature_line ',' let
   29    | error ',' let

   30 exp: OBJECTID ASSIGN exp
   31    | exp '.' OBJECTID '(' formal_exp_list ')'
   32    | exp '.' OBJECTID '(' ')'
   33    | exp '@' TYPEID '.' OBJECTID '(' formal_exp_list ')'
   34    | exp '@' TYPEID '.' OBJECTID '(' ')'
   35    | OBJECTID '(' formal_exp_list ')'
   36    | OBJECTID '(' ')'
   37    | IF exp THEN exp ELSE exp FI
   38    | WHILE exp LOOP exp POOL
   39    | '{' exp_list '}'
   40    | LET let
   41    | CASE exp OF branch_list ESAC
   42    | NEW TYPEID
   43    | ISVOID exp
   44    | exp '+' exp
   45    | exp '-' exp
   46    | exp '*' exp
   47    | exp '/' exp
   48    | '~' exp
   49    | exp '<' exp
   50    | exp '=' exp
   51    | exp LE exp
   52    | NOT exp
   53    | '(' exp ')'
   54    | OBJECTID
   55    | INT_CONST
   56    | STR_CONST
   57    | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 12 31 32 33 34 35 36 53
    ')' (41) 11 12 31 32 33 34 35 36 53
    '*' (42) 46
    '+' (43) 44
    ',' (44) 17 26 28 29
    '-' (45) 45
    '.' (46) 31 32 33 34
    '/' (47) 47
    ':' (58) 11 12 13 18 21 27 28
    ';' (59) 4 5 6 10 11 12 13 21 22 23 24
    '<' (60) 49
    '=' (61) 50
    '@' (64) 33 34
    '{' (123) 5 6 11 12 39
    '}' (125) 5 6 11 12 39
    '~' (126) 48
    error (256) 4 10 24 29
    CLASS (258) 5 6
    ELSE (259) 37
    FI (260) 37
    IF (261) 37
    IN (262) 27
    INHERITS (263) 6
    LET (264) 40
    LOOP (265) 38
    POOL (266) 38
    THEN (267) 37
    WHILE (268) 38
    CASE (269) 41
    ESAC (270) 41
    OF (271) 41
    DARROW (272) 21
    NEW (273) 42
    ISVOID (274) 43
    STR_CONST <symbol> (275) 56
    INT_CONST <symbol> (276) 55
    BOOL_CONST <boolean> (277) 57
    TYPEID <symbol> (278) 5 6 11 12 13 18 21 27 28 33 34 42
    OBJECTID <symbol> (279) 11 12 13 18 21 27 28 30 31 32 33 34 35 36 54
    ASSIGN (280) 15 30
    NOT (281) 52
    LE (282) 51
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3 4
    class <class_> (48)
        on left: 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9 10
        on right: 5 6 8 10
    feature <feature> (50)
        on left: 11 12 13
        on right: 8 9
    feature_line <expression> (51)
        on left: 14 15
        on right: 13 27 28
    formal_list <formals> (52)
        on left: 16 17
        on right: 11 17
    formal <formal> (53)
        on left: 18
        on right: 16 17
    branch_list <cases> (54)
        on left: 19 20
        on right: 20 41
    branch <case_> (55)
        on left: 21
        on right: 19 20
    exp_list <expressions> (56)
        on left: 22 23 24
        on right: 23 24 39
    formal_exp_list <expressions> (57)
        on left: 25 26
        on right: 26 31 33 35
    let <expression> (58)
        on left: 27 28 29
        on right: 28 29 40
    exp <expression> (59)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 11 12 15 21 22 23 25 26 27 30 31 32 33 34 37 38 41 43 44 45 46 47 48 49 50 51 52 53


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . ';' class_list

    ';'  shift, and go to state 6


State 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error ';' . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    class_list  go to state 10
    class       go to state 5


State 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    3 class_list: class_list . class
    4           | error ';' class_list .

    CLASS  shift, and go to state 2

    CLASS     [reduce using rule 4 (class_list)]
    $default  reduce using rule 4 (class_list)

    class  go to state 9


State 11

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 12

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 16
    feature       go to state 17


State 13

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 14

   10 feature_list: error . ';' feature_list

    ';'  shift, and go to state 19


State 15

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' exp '}' ';'
   12        | OBJECTID . '(' ')' ':' TYPEID '{' exp '}' ';'
   13        | OBJECTID . ':' TYPEID feature_line ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 16

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 22

    feature  go to state 23


State 17

    9 feature_list: feature .

    $default  reduce using rule 9 (feature_list)


State 18

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 24
    feature       go to state 17


State 19

   10 feature_list: error ';' . feature_list

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 25
    feature       go to state 17


State 20

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' exp '}' ';'
   12        | OBJECTID '(' . ')' ':' TYPEID '{' exp '}' ';'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal_list  go to state 28
    formal       go to state 29


State 21

   13 feature: OBJECTID ':' . TYPEID feature_line ';'

    TYPEID  shift, and go to state 30


State 22

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 23

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 24

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 32

    feature  go to state 23


State 25

    8 feature_list: feature_list . feature
   10             | error ';' feature_list .

    OBJECTID  shift, and go to state 15

    OBJECTID  [reduce using rule 10 (feature_list)]
    $default  reduce using rule 10 (feature_list)

    feature  go to state 23


State 26

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 27

   12 feature: OBJECTID '(' ')' . ':' TYPEID '{' exp '}' ';'

    ':'  shift, and go to state 34


State 28

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' exp '}' ';'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 29

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


State 30

   13 feature: OBJECTID ':' TYPEID . feature_line ';'

    ASSIGN  shift, and go to state 37

    $default  reduce using rule 14 (feature_line)

    feature_line  go to state 38


State 31

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 32

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 39


State 33

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 40


State 34

   12 feature: OBJECTID '(' ')' ':' . TYPEID '{' exp '}' ';'

    TYPEID  shift, and go to state 41


State 35

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' exp '}' ';'

    ':'  shift, and go to state 42


State 36

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 43


State 37

   15 feature_line: ASSIGN . exp

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 58


State 38

   13 feature: OBJECTID ':' TYPEID feature_line . ';'

    ';'  shift, and go to state 59


State 39

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 40

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 41

   12 feature: OBJECTID '(' ')' ':' TYPEID . '{' exp '}' ';'

    '{'  shift, and go to state 60


State 42

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' exp '}' ';'

    TYPEID  shift, and go to state 61


State 43

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


State 44

   37 exp: IF . exp THEN exp ELSE exp FI

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 62


State 45

   40 exp: LET . let

    error     shift, and go to state 63
    OBJECTID  shift, and go to state 64

    let  go to state 65


State 46

   38 exp: WHILE . exp LOOP exp POOL

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 66


State 47

   41 exp: CASE . exp OF branch_list ESAC

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 67


State 48

   42 exp: NEW . TYPEID

    TYPEID  shift, and go to state 68


State 49

   43 exp: ISVOID . exp

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 69


State 50

   56 exp: STR_CONST .

    $default  reduce using rule 56 (exp)


State 51

   55 exp: INT_CONST .

    $default  reduce using rule 55 (exp)


State 52

   57 exp: BOOL_CONST .

    $default  reduce using rule 57 (exp)


State 53

   30 exp: OBJECTID . ASSIGN exp
   35    | OBJECTID . '(' formal_exp_list ')'
   36    | OBJECTID . '(' ')'
   54    | OBJECTID .

    ASSIGN  shift, and go to state 70
    '('     shift, and go to state 71

    $default  reduce using rule 54 (exp)


State 54

   52 exp: NOT . exp

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 72


State 55

   48 exp: '~' . exp

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 73


State 56

   39 exp: '{' . exp_list '}'

    error       shift, and go to state 74
    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp_list  go to state 75
    exp       go to state 76


State 57

   53 exp: '(' . exp ')'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 77


State 58

   15 feature_line: ASSIGN exp .
   31 exp: exp . '.' OBJECTID '(' formal_exp_list ')'
   32    | exp . '.' OBJECTID '(' ')'
   33    | exp . '@' TYPEID '.' OBJECTID '(' formal_exp_list ')'
   34    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   44    | exp . '+' exp
   45    | exp . '-' exp
   46    | exp . '*' exp
   47    | exp . '/' exp
   49    | exp . '<' exp
   50    | exp . '=' exp
   51    | exp . LE exp

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 15 (feature_line)


State 59

   13 feature: OBJECTID ':' TYPEID feature_line ';' .

    $default  reduce using rule 13 (feature)


State 60

   12 feature: OBJECTID '(' ')' ':' TYPEID '{' . exp '}' ';'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    exp  go to state 87


State 61

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' exp '}' ';'

    '{'  shift, and go to state 88


State 62

   31 exp: exp . '.' OBJECTID '(' formal_exp_list ')'
   32    | exp . '.' OBJECTID '(' ')'
   33    | exp . '@' TYPEID '.' OBJECTID '(' formal_exp_list ')'
   34    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   37    | IF exp . THEN exp ELSE exp FI
   44    | exp . '+' exp
   45    | exp . '-' exp
   46    | exp . '*' exp
   47    | exp . '/' exp
   49    | exp . '<' exp
   50    | exp . '=' exp
   51    | exp . LE exp

    THEN  shift, and go to state 89
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 63

   29 let: error . ',' let

    ','  shift, and go to state 90


State 64

   27 let: OBJECTID . ':' TYPEID feature_line IN exp
   28    | OBJECTID . ':' TYPEID feature_line ',' let

    ':'  shift, and go to state 91


State 65

   40 exp: LET let .

    $default  reduce using rule 40 (exp)


State 66

   31 exp: exp . '.' OBJECTID '(' formal_exp_list ')'
   32    | exp . '.' OBJECTID '(' ')'
   33    | exp . '@' TYPEID '.' OBJECTID '(' formal_exp_list ')'
   34    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   38    | WHILE exp . LOOP exp POOL
   44    | exp . '+' exp
   45    | exp . '-' exp
   46    | exp . '*' exp
   47    | exp . '/' exp
   49    | exp . '<' exp
   50    | exp . '=' exp
   51    | exp . LE exp

    LOOP  shift, and go to state 92
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 67

   31 exp: exp . '.' OBJECTID '(' formal_exp_list ')'
   32    | exp . '.' OBJECTID '(' ')'
   33    | exp . '@' TYPEID '.' OBJECTID '(' formal_exp_list ')'
   34    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   41    | CASE exp . OF branch_list ESAC
   44    | exp . '+' exp
   45    | exp . '-' exp
   46    | exp . '*' exp
   47    | exp . '/' exp
   49    | exp . '<' exp
   50    | exp . '=' exp
   51    | exp . LE exp

    OF   shift, and go to state 93
    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86


State 68

   42 exp: NEW TYPEID .

    $default  reduce using rule 42 (exp)


State 69

   31 exp: exp . '.' OBJECTID '(' formal_exp_list ')'
   32    | exp . '.' OBJECTID '(' ')'
   33    | exp . '@' TYPEID '.' OBJECTID '(' formal_exp_list ')'
   34    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   43    | ISVOID exp .
   44    | exp . '+' exp
   45    | exp . '-' exp
   46    | exp . '*' exp
   47    | exp . '/' exp
   49    | exp . '<' exp
   50    | exp . '=' exp
   51    | exp . LE exp

    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 43 (exp)


State 70

   30 exp: OBJECTID ASSIGN . exp
